--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
+    "react-cookie": "^2.1.1",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-form": "^6.0.0-rc.3",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
